<resources>
    <string name="app_name">BitChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="signup_button">SIGNUP</string>
    <string name="login_button">Login</string>
    <string name="signup_name_hint">Enter Name</string>
    <string name="signup_password_hint">Enter Password</string>
    <string name="signup_number_hint">Enter Number</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send_message_button">Send</string>
    <string name="enter_message_hint">Enter Message</string>
</resources>
